# gemma4-irodori-voice-chat

./: .gitignore  AGENTS.md  CONTEXT.md  README.en.md  README.md
.claude/: launch.json  settings.json
.claude/hooks/: README.md  check-on-stop.sh  format-file.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml
assets/voices/: README.md
client/: .env.example  .prettierignore  .prettierrc.json  DESIGN.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
client/src/: App.svelte  api.ts  main.ts  styles.css  vite-env.d.ts
client/src-tauri/: tauri.conf.json
docs/: architecture.md  design.md  handoff.md  macbook-local-setup.md  mvp-plan.md  no-ref-voice-setup.md  reference-voice-setup.md  scripts-and-startup.md  tauri-setup.md  ui-implementation-plan.md  verification.md  voicedesign-sample-setup.md  windows-amd-setup.md  wsl-amd-setup.md
docs/adr/: 0001-thin-client-conversation-server.md  0002-lan-only-conversation-server.md  0003-use-svelte-for-client-ui.md  (+1 more)
scripts/: check-real-stack.sh  generate-voicedesign-sample.sh  register-conversation-voice.sh  register-irodori-voice.sh  setup-irodori-amd.sh  start-conversation-server-real.sh  start-inference-stack.sh
server/: README.md  pyproject.toml
server/app/: __init__.py  adapters.py  config.py  main.py  models.py  service.py  storage.py
server/tests/: test_service.py
stt-server/: README.md  pyproject.toml
stt-server/app/: __init__.py  config.py  main.py
stt-server/tests/: test_app.py
(+43 files in other folders)
